# fang_rs

./: .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yaml
docs/: schema.txt  text-formatting.txt
scripts/: mod-user.sh  pdf-load.txt  publish.sh
src/: main.rs
src/routes/: article.rs  auth.rs  business_plans.rs  edit_headlines.rs  edit_profile.rs  home.rs  members.rs  mod.rs  not_found.rs  page_editor.rs  submit_page_edit.rs
src/structs/: Author.rs  PageEditInput.rs  article.rs  mod.rs
src/utils/: authors_to_string.rs  get_articles.rs  get_authors.rs  get_headlines.rs  mod.rs
static/html/: 404.html  article.html  business-plans.html  edit-business-plans.html  edit-headlines.html  edit-profile.html  homepage.html  login.html  member-page.html  members.html  page-editor.html  style.css
